# LuaSandboxApp

./: .gitignore
client/app/: build.gradle
client/app/src/androidTest/java/uff/ic/luasandbox/: ExampleInstrumentedTest.java
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/uff/ic/luasandbox/: LuasandboxClient.java  LuasandboxListener.java  MainActivity.java  OpenActivity.java  OutputActivity.java  SaveActivity.java  SettingsActivity.java
client/app/src/main/res/layout/: activity_main.xml  activity_open.xml  activity_output.xml  activity_save.xml  activity_settings.xml
client/app/src/main/res/values/: strings.xml
client/app/src/test/java/uff/ic/luasandbox/: ExampleUnitTest.java
client/gradle/wrapper/: gradle-wrapper.properties
server/: CMakeLists.txt  library.lua  luasandbox.cpp  luasandbox.h  luasandboxserver.cpp  luasandboxserver.h  luavm.cpp  server.cpp
server/cmake/: FindWebsocketpp.cmake
src/main/: AndroidManifest.xml
src/main/java/uff/ic/luasandbox/: MainActivity.java  OpenActivity.java  SaveActivity.java  SaveAs.java
src/main/res/layout/: activity_main.xml  activity_open.xml  activity_output.xml  activity_save.xml  activity_save_as.xml  mylist.xml
src/main/res/values/: strings.xml
